[package]
name = "smpscheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduler = {git = "https://github.com/rcore-os/arceos"}
lock_api = "0"

[features]
default = ["fifo"]
cfs = []
fifo = []
rr = []


[dev-dependencies]
spin = "0.9"